update ListTasksUseCaseImplTest to use getFirst() for improved readability